All UI changes + moving pages Logic

--- a/trips.css
+++ b/trips.css
@@ -1,90 +1,235 @@
-
 body {
-  /* background-color: rgb(88, 88, 158); */
-  background: linear-gradient(
-    90deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(11, 3, 63, 1) 0%,
-    rgba(77, 161, 179, 1) 0%,
-    rgba(9, 9, 121, 1) 0%,
-    rgba(32, 104, 130, 1) 25%,
-    rgba(3, 143, 210, 1) 53%,
-    rgba(3, 143, 210, 1) 72%,
-    rgba(3, 143, 210, 1) 90%
-  );
-  /* background-color: rgb(32, 32, 87); */
-  text-align: center;
-  color: azure;
+  background-image: url('bg1.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: darkslategrey;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 20px;
 }
 header {
-  background: linear-gradient(
-    90deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(11, 3, 63, 1) 0%,
-    rgba(77, 161, 179, 1) 0%,
-    rgba(9, 9, 121, 1) 0%,
-    rgba(32, 104, 130, 1) 25%,
-    rgba(3, 143, 210, 1) 53%,
-    rgba(3, 143, 210, 1) 72%,
-    rgba(3, 143, 210, 1) 90%
-  );
     color: azure;
-  text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  padding: 4px;
 }
-
 footer {
-  background: linear-gradient(
-    90deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(11, 3, 63, 1) 0%,
-    rgba(77, 161, 179, 1) 0%,
-    rgba(9, 9, 121, 1) 0%,
-    rgba(32, 104, 130, 1) 25%,
-    rgba(3, 143, 210, 1) 53%,
-    rgba(3, 143, 210, 1) 72%,
-    rgba(3, 143, 210, 1) 90%
-  );  text-align: center;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   padding: 4px;
+  position: fixed;
+  bottom:0;
+  right: 0%;
+}
+h1 {
+    font-size: 60px;
+    margin: 15px;
+    color: darkslategrey;
+}
+a {
+    color: whitesmoke;
 }
 main {
-  background: linear-gradient(
-    90deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(11, 3, 63, 1) 0%,
-    rgba(77, 161, 179, 1) 0%,
-    rgba(9, 9, 121, 1) 0%,
-    rgba(32, 104, 130, 1) 25%,
-    rgba(3, 143, 210, 1) 53%,
-    rgba(3, 143, 210, 1) 72%,
-    rgba(3, 143, 210, 1) 90%
-  );  padding-bottom: 18px;
-}
-.displaySingleTrip {
-  text-align: center;
+    padding-bottom: 25px;
 }
 #editTrip {
-  background: linear-gradient(
-    90deg,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(11, 3, 63, 1) 0%,
-    rgba(77, 161, 179, 1) 0%,
-    rgba(9, 9, 121, 1) 0%,
-    rgba(32, 104, 130, 1) 25%,
-    rgba(3, 143, 210, 1) 53%,
-    rgba(3, 143, 210, 1) 72%,
-    rgba(3, 143, 210, 1) 90%
-  );
-  /* background-color: rgb(49, 51, 61); */
-  /* padding: 10px; */
   margin-top: 20px;
   margin-bottom: 20px;
   padding: 20px;
 }
-
 button {
   margin: 4px;
+}
+
+button[name="custom-btn"] {
+  width: 130px;
+  height: 40px;
+  color: #fff;
+  border-radius: 5px;
+  padding: 10px 25px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 500;
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+   box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+   7px 7px 20px 0px rgba(0,0,0,.1),
+   4px 4px 5px 0px rgba(0,0,0,.1);
+  outline: none;
+}
+
+/* Redirect Buttons */
+#btn-redirect {
+background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
+  width: 130px;
+  height: 40px;
+  line-height: 42px;
+  padding: 0;
+  border: none;
+  
+}
+#btn-redirect span a {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+#btn-redirect:before,
+#btn-redirect:after {
+  position: absolute;
+  content: "";
+  right: 0;
+  top: 0;
+  background: red;
+  transition: all 0.3s ease;
+}
+#btn-redirect:before {
+  height: 0%;
+  width: 2px;
+}
+#btn-redirect:after {
+  width: 0%;
+  height: 2px;
+}
+#btn-redirect:hover{
+  background: transparent;
+  box-shadow: none;
+}
+#btn-redirect:hover:before {
+  height: 100%;
+}
+#btn-redirect:hover:after {
+  width: 100%;
+}
+#btn-redirect span a:hover{
+   color: darkslategrey;
+   font-weight: bold;
+}
+#btn-redirect span:before,
+#btn-redirect span:after {
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: 0;
+  background: red;
+  transition: all 0.3s ease;
+}
+#btn-redirect span:before {
+  width: 2px;
+  height: 0%;
+}
+#btn-redirect span:after {
+  width: 0%;
+  height: 2px;
+}
+#btn-redirect span:hover:before {
+  height: 100%;
+}
+#btn-redirect span:hover:after {
+  width: 100%;
+}
+
+/* Screen Down Buttons */
+#btn-screen-down {
+background-image: linear-gradient(315deg, #89d8d3 0%, #03c8a8 74%);
+  border: none;
+  z-index: 1;
+}
+#btn-screen-down:after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  border-radius: 5px;
+background-image: linear-gradient(315deg, #4dccc6 0%, #96e4df 74%);
+  transition: all 0.3s ease;
+}
+#btn-screen-down:hover:after {
+  top: 0;
+  height: 100%;
+}
+
+/* Slide Right Buttons */
+#btn-slide-right {
+background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
+  border: none;
+  z-index: 1;
+}
+#btn-slide-right:after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 100%;
+  top: 0;
+  right: 0;
+  z-index: -1;
+  background-color: #b621fe;
+  border-radius: 5px;
+   box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+   7px 7px 20px 0px rgba(0,0,0,.1),
+   4px 4px 5px 0px rgba(0,0,0,.1);
+  transition: all 0.3s ease;
+}
+#btn-slide-right:hover:after {
+  left: 0;
+  width: 100%;
+}
+
+/* Slide Left Buttons */
+#btn-slide-left {
+background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
+  border: none;
+  z-index: 1;
+}
+#btn-slide-left:after {
+  position: absolute;
+  content: "";
+  width: 0;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  background-color: #b621fe;
+  border-radius: 5px;
+   box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+   7px 7px 20px 0px rgba(0,0,0,.1),
+   4px 4px 5px 0px rgba(0,0,0,.1);
+  transition: all 0.3s ease;
+}
+#btn-slide-left:hover:after {
+    left: auto;
+  right: 0;
+  width: 100%;
+}
+
+/* Slide Up Buttons */
+.btn-slide-up {
+  border: none;
+  z-index: 1;
+  background: red;
+  background-image: red;
+}
+.btn-slide-up:after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 0;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  border-radius: 5px;
+  background-image: linear-gradient(315deg, #eaf818 0%, #f6fc9c 74%);
+   box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5);
+   7px 7px 20px 0px rgba(0,0,0,.1),
+   4px 4px 5px 0px rgba(0,0,0,.1);
+  transition: all 0.3s ease;
+}
+.btn-slide-up:hover {
+  color: #000;
+}
+.btn-slide-up:hover:after {
+  top: auto;
+  bottom: 0;
+  height: 100%;
 }
