Updates to UI And jQuery Logic + README file

--- a/trips.css
+++ b/trips.css
@@ -10,6 +10,10 @@ header {
     color: azure;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+section {
+  display: inline-flex;
+  flex-direction: row;
+}
 footer {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   padding: 4px;
@@ -28,15 +32,20 @@ a {
 main {
     padding-bottom: 25px;
 }
-#editTrip {
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding: 20px;
+#displayTrips {
+  margin-right: 25px;
+}
+#displayTrip, #editTrip {
+  height: fit-content;
+  background: rgba(49, 54, 194, 0.733);
+  color: whitesmoke;
+  border-radius: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 button {
   margin: 4px;
 }
-
 button[name="custom-btn"] {
   width: 130px;
   height: 40px;
@@ -220,7 +229,7 @@ background: linear-gradient(0deg, rgba(0,172,238,1) 0%, rgba(2,126,251,1) 100%);
   z-index: -1;
   border-radius: 5px;
   background-image: linear-gradient(315deg, #eaf818 0%, #f6fc9c 74%);
-   box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5);
+   box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
    7px 7px 20px 0px rgba(0,0,0,.1),
    4px 4px 5px 0px rgba(0,0,0,.1);
   transition: all 0.3s ease;
